--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,10 +59,297 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"cleaned data/year-industry.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.groupby(df[\"Industry\"])[\"Number\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.to_frame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Number</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Industry</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Accommodation and Food Services</th>\n",
+       "      <td>35965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Administrative and Support Services</th>\n",
+       "      <td>1556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Agriculture, Forestry and Fishing</th>\n",
+       "      <td>6223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Arts and Recreation Services</th>\n",
+       "      <td>3379</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Construction</th>\n",
+       "      <td>18376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Education and Training</th>\n",
+       "      <td>13998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Electricity, Gas, Water and Waste Services</th>\n",
+       "      <td>4005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Financial and Insurance Services</th>\n",
+       "      <td>7981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Health Care and Social Assistance</th>\n",
+       "      <td>29862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Information Media and Telecommunications</th>\n",
+       "      <td>14149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Manufacturing</th>\n",
+       "      <td>17349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mining</th>\n",
+       "      <td>7612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Other Services</th>\n",
+       "      <td>31215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Professional, Scientific and Technical Services</th>\n",
+       "      <td>21005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Public Administration and Safety</th>\n",
+       "      <td>2222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rental, Hiring and Real Estate Services</th>\n",
+       "      <td>2825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Retail Trade</th>\n",
+       "      <td>11923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Transport Postal and Warehousing</th>\n",
+       "      <td>3564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wholesale Trade</th>\n",
+       "      <td>4147</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 Number\n",
+       "Industry                                               \n",
+       "Accommodation and Food Services                   35965\n",
+       "Administrative and Support Services                1556\n",
+       "Agriculture, Forestry and Fishing                  6223\n",
+       "Arts and Recreation Services                       3379\n",
+       "Construction                                      18376\n",
+       "Education and Training                            13998\n",
+       "Electricity, Gas, Water and Waste Services         4005\n",
+       "Financial and Insurance Services                   7981\n",
+       "Health Care and Social Assistance                 29862\n",
+       "Information Media and Telecommunications          14149\n",
+       "Manufacturing                                     17349\n",
+       "Mining                                             7612\n",
+       "Other Services                                    31215\n",
+       "Professional, Scientific and Technical Services   21005\n",
+       "Public Administration and Safety                   2222\n",
+       "Rental, Hiring and Real Estate Services            2825\n",
+       "Retail Trade                                      11923\n",
+       "Transport Postal and Warehousing                   3564\n",
+       "Wholesale Trade                                    4147"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Number</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Industry</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Financial and Insurance Services</th>\n",
+       "      <td>7981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Retail Trade</th>\n",
+       "      <td>11923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Education and Training</th>\n",
+       "      <td>13998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Information Media and Telecommunications</th>\n",
+       "      <td>14149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Manufacturing</th>\n",
+       "      <td>17349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Construction</th>\n",
+       "      <td>18376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Professional, Scientific and Technical Services</th>\n",
+       "      <td>21005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Health Care and Social Assistance</th>\n",
+       "      <td>29862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Other Services</th>\n",
+       "      <td>31215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Accommodation and Food Services</th>\n",
+       "      <td>35965</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 Number\n",
+       "Industry                                               \n",
+       "Financial and Insurance Services                   7981\n",
+       "Retail Trade                                      11923\n",
+       "Education and Training                            13998\n",
+       "Information Media and Telecommunications          14149\n",
+       "Manufacturing                                     17349\n",
+       "Construction                                      18376\n",
+       "Professional, Scientific and Technical Services   21005\n",
+       "Health Care and Social Assistance                 29862\n",
+       "Other Services                                    31215\n",
+       "Accommodation and Food Services                   35965"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sort_values('Number').tail(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "industry = [\"Financial and Insurance Services\",\n",
+    "\"Retail Trade\",\n",
+    "\"Education and Training\",\n",
+    "\"Information Media and Telecommunications\",\n",
+    "\"Manufacturing\",\n",
+    "\"Construction\",\n",
+    "\"Professional, Scientific and Technical Services\",\n",
+    "\"Health Care and Social Assistance\",\n",
+    "\"Other Services\",\n",
+    "\"Accommodation and Food Services\"]"
+   ]
   }
  ],
  "metadata": {
